# vide-neo

./: .gitignore  Cargo.toml
vide/: Cargo.toml
vide/examples/: hello_world.rs
vide/src/: lib.rs  prelude.rs
vide_animate/: Cargo.toml
vide_animate/src/: cubic_bezier.rs  ease.rs  interpolate.rs  lib.rs  prelude.rs
vide_audio/: Cargo.toml
vide_common/: Cargo.toml
vide_common/src/: color.rs  config.rs  lib.rs  prelude.rs  render.rs  standards.rs  time_code.rs  transform.rs  types.rs  visible_object.rs
vide_ffmpeg/: Cargo.toml
vide_ffmpeg/src/: lib.rs
vide_project/: Cargo.toml
vide_project/src/: clip.rs  lib.rs  prelude.rs
vide_render/: Cargo.toml
vide_render/src/: blend.rs  interface.rs  lib.rs  texture_factory.rs
vide_render/src/export/: gif.rs  images.rs  mod.rs
vide_render/src/shaders/: global_bind_group.wgsl
vide_render/src/shaders/blend/: normal.wgsl  vertex.wgsl
vide_video/: Cargo.toml
vide_video/src/: lib.rs  rect_shape.rs
vide_video/src/shaders/: rect_shape.wgsl
