[package]
name = "vide_render"
version = "0.1.0"
edition = "2021"

[dependencies]
vide_common = { path = "../vide_common" }
vide_project = { path = "../vide_project" }
env_logger = "0.11.5"
bytemuck = "1.19.0"
pollster = "0.4.0"
image = "0.25.5"
euler = "0.4.1"
wgpu = "23.0.0"
gif = "0.13.1"
log = "0.4.22"
